--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "build": "gulp build",
     "serve": "gulp serve",
     "start": "gulp start"
+  },
+  "dependencies": {
+    "gulp-cli": "^2.3.0"
   }
 }
